--- a/packages.config
+++ b/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="DockPanelSuite" version="3.0.6" targetFramework="net48" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.6" targetFramework="net48" />
-  <package id="ILMerge.MSBuild.Task" version="1.0.7" targetFramework="net48" />
+  <package id="ILMerge" version="3.0.41" targetFramework="net48" />
   <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net48" />
   <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.49" targetFramework="net48" />
   <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.34" targetFramework="net48" />
@@ -15,6 +15,7 @@
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net48" />
   <package id="Microsoft.Web.WebView2" version="1.0.1343.22" targetFramework="net48" />
   <package id="Microsoft.Web.Xdt" version="3.1.0" targetFramework="net48" />
+  <package id="MSBuild.ILMerge.Task" version="1.1.3" targetFramework="net48" />
   <package id="MscrmTools.Xrm.Connection" version="1.2023.6.56" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
